2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* nasl/nasl.c: Properly include gnutls.h instead of relying on it
	being already included.

2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>

	Handle include search path more strictly to encourage stronger
	separation of individual submodules and to make dependencies between
	them more visible.

	* misc/CMakeLists.txt, nasl/CMakeLists, omp/CMakeLists.txt: Remove
	relative include_directories commands.

	* misc/openvas_auth.c, misc/plugutils.h, misc/www_funcs.c,
	nasl/capture_packet.c, nasl/charcnv.c, nasl/nasl.c,
	nasl/nasl_builtin_find_service.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_builtin_synscan.c,
	nasl/nasl_cert.c, nasl/nasl_cmd_exec.c, nasl/nasl_crypto.c,
	nasl/nasl_crypto2.c, nasl/nasl_debug.c, nasl/nasl_host.c,
	nasl/nasl_http.c, nasl/nasl_init.c, nasl/nasl_misc_funcs.c,
	nasl/nasl_packet_forgery.c, nasl/nasl_packet_forgery_v6.c,
	nasl/nasl_scanner_glue.c, nasl/nasl_snmp.c, nasl/nasl_socket.c,
	nasl/nasl_ssh.c, nasl/nasl_wmi.c, omp/omp.c: Adjust include statements
	to use the appropriate relative location of the header file to include
	instead of relying on it being somewhere in the search path.

2016-01-06  Michael Wiegand <michael.wiegand@greenbone.net>

	Adapt build environment now that the redis dependency has moved from
	misc to base. Weed out a few superfluous linkings.

	* CMakeLists.txt: Don't check for hiredis here, it is only needed by
	base and will be checked for there.

	* base/CMakeLists.txt: Add check for hiredis from top-level
	CMakeLists.txt. Remove GnuTLS include dirs and linker flags since base
	does not use GnuTLS. Add include dirs and linker flags for hiredis.
	Remove superfluous linking against LibSSH and openvas_misc_shared.

	* misc/CMakeLists.txt: Remove superfluous linking against hiredis.

2016-01-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/credentials.h, base/cvss.c, base/nvti.c, base/nvticache.c,