@@ -1,5 +1,10 @@
 2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* nasl/CMakeLists.txt: Set linker flags explicitly when building
+	binaries.
+
+2016-01-07  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	* nasl/nasl.c: Properly include gnutls.h instead of relying on it
 	being already included.
 
